<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidChess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Reset</string>
    <string name="current_turn">Current Turn : </string>
    <string name="current_turn_text">White</string>
    <string name="white_pieces">White Pieces: </string>
    <string name="white_pieces_text">16</string>
    <string name="black_pieces">Black Pieces: </string>
    <string name="black_pieces_text">16</string>
    <string name="timer">15:00</string>
    <string name="choices">Choices</string>
    <string name="ok">OK</string>

</resources>
